# StarlightCommon-Arch

./: CMakeLists.txt
include/: Enums.h  FileHelpers.h  GLSLShader.h  ResourceHolder.hpp  Shader.h
